Fixes navbar collapse icon

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -8,11 +8,11 @@
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
-.navbar-inverse a.navbar-brand {
+.navbar-dark a.navbar-brand {
   font-family: 'Montserrat Alternates', sans-serif;
   color: white;
 }
-.navbar-inverse a.nav-link {
+.navbar-dark a.nav-link {
   color: white;
   font-family: 'Handlee', cursive;
 }
